fixed overflow issue

--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,11 @@
 * {
+    /* global structure settings */
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
+
+    /* global font settings */
     text-decoration: none;
+    font-family: Consolas, monaco, monospace;
 }
